--- a/html/popup.html
+++ b/html/popup.html
@@ -4,6 +4,6 @@
 <title></title>
 </head>
 <body>
-<script src="/src/popup/index.js"></script>
+<script src="/js/popup.js"></script>
 </body>
 </html>
