--- a/html/panel.html
+++ b/html/panel.html
@@ -39,9 +39,9 @@
             <ul>
                 <li class="speedLine"><label for="operationSpeed"><span>fast</span><span>slow</span></label><input type="range" id="operationSpeed" value="0"></li>
                 <li><button id="executeTestCase" ng-click="executeTestCase()"><img src="/img/panel/play_all.png"></button></li>
-                <li><button id="executeTestCommand"><img src="/img/panel/play_current.png"></button></li>
-                <li><button id="stopTest"><img src="/img/panel/stop.png"></button></li>
-                <li><button id="operationRecording"><img src="/img/panel/rec_stop.png"></button></li>
+                <!--<li><button id="executeTestCommand"><img src="/img/panel/play_current.png"></button></li>-->
+                <!--<li><button id="stopTest"><img src="/img/panel/stop.png"></button></li>-->
+                <li><input type="checkbox" id="operationRecording"><label for="operationRecording"><img src="/img/panel/rec_stop.png"><img src="/img/panel/rec_start.png"></label></li>
             </ul>
         </div>
     </div><!-- #menuPanelCtrl -->
