--- a/html/panel.html
+++ b/html/panel.html
@@ -41,7 +41,7 @@
                 <li><button id="executeTestCase" ng-click="executeTestCase()"><img src="/img/panel/play_all.png"></button></li>
                 <!--<li><button id="executeTestCommand"><img src="/img/panel/play_current.png"></button></li>-->
                 <!--<li><button id="stopTest"><img src="/img/panel/stop.png"></button></li>-->
-                <li><input type="checkbox" id="operationRecording"><label for="operationRecording"><img src="/img/panel/rec_stop.png"><img src="/img/panel/rec_start.png"></label></li>
+                <li><input type="checkbox" id="operationRecording" ng-model="operationRecording" checked><label for="operationRecording"><img src="/img/panel/rec_start.png"><img src="/img/panel/rec_stop.png"></label></li>
             </ul>
         </div>
     </div><!-- #menuPanelCtrl -->
