--- a/html/panel.html
+++ b/html/panel.html
@@ -37,7 +37,7 @@
             <button id="quitBrowser" ng-click="quitBrowser()">quit</button>
             <hr>
             <ul>
-                <li class="speedLine"><label for="operationSpeed"><span>fast</span><span>slow</span></label><input type="range" id="operationSpeed" value="0"></li>
+                <li class="speedLine"><label for="operationSpeed"><span>fast</span><span>slow</span></label><input type="range" id="operationSpeed" value="0" ng-model="operationSpeed" ng-change="changeOperationSpeed()"></li>
                 <li><button id="executeTestCase" ng-click="executeTestCase()"><img src="/img/panel/play_all.png"></button></li>
                 <!--<li><button id="executeTestCommand"><img src="/img/panel/play_current.png"></button></li>-->
                 <!--<li><button id="stopTest"><img src="/img/panel/stop.png"></button></li>-->
