--- a/html/panel.html
+++ b/html/panel.html
@@ -39,7 +39,7 @@
             <ul>
                 <li class="speedLine"><label for="operationSpeed"><span>fast</span><span>slow</span></label><input type="range" id="operationSpeed" value="0" ng-model="operationSpeed" ng-change="changeOperationSpeed()"></li>
                 <li><button id="executeTestCase" ng-click="executeTestCase()"><img src="/img/panel/play_all.png"></button></li>
-                <!--<li><button id="executeTestCommand"><img src="/img/panel/play_current.png"></button></li>-->
+                <!--<li><button id="executeTestCommand"><img src="/img/panel/play_current.png"></button></li>>-->
                 <!--<li><button id="stopTest"><img src="/img/panel/stop.png"></button></li>-->
                 <li><input type="checkbox" id="operationRecording" ng-model="operationRecording" checked><label for="operationRecording"><img src="/img/panel/rec_start.png"><img src="/img/panel/rec_stop.png"></label></li>
             </ul>
